# apertura

./: .env.example  .gitignore  .python-version  README.md  modal_app.py  pyproject.toml  render.yaml
blog/: post.md
docker/gateway/: Dockerfile
docker/ingestion/: Dockerfile
docker/query/: Dockerfile
eval/: golden_set.yaml  results.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
grafana/provisioning/dashboards/: apertura.json  dashboard.yaml
k8s/: gateway.yaml  ingestion-service.yaml  kind-config.yaml  namespace.yaml  qdrant.yaml  query-service.yaml  secret.template.yaml
lambda/: ARCHITECTURE.md  Dockerfile  handler.py
scripts/: ask.py  ingest.py  run_ci_eval.py  run_eval.py  search.py  serve.py
src/apertura/: config.py
src/apertura/agents/: nodes.py  observability.py  pipeline.py  state.py
src/apertura/answer/: answerer.py
src/apertura/api/: gateway_app.py  ingestion_app.py  main.py  query_app.py  static.py
src/apertura/eval/: runner.py  text_baseline.py
src/apertura/ingestion/: embedder.py  modal_client.py  pdf_render.py  pipeline.py  vector_store.py
src/apertura/router/: classifier.py
