[project]
name = "apertura"
version = "0.1.0"
description = "Multimodal document intelligence (visual RAG) over complex PDFs"
requires-python = ">=3.10"
dependencies = [
    "colpali-engine>=0.3.1",
    "qdrant-client>=1.12.0",
    "transformers>=4.45.0",
    "torch",
    "pdf2image",
    "pillow",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
